; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine-data.c_add_parent.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine-data.c_add_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.relative = type { i32, i64, %struct.node, %struct.TYPE_6__, %struct.relative*, %struct.relative* }
%struct.node = type { i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, %struct.connection* }
%struct.connection = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32* }

@RELATIVES = common dso_local global %struct.relative zeroinitializer, align 8
@host = common dso_local global i32 0, align 4
@STATS = common dso_local global %struct.TYPE_8__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_parent(i32 %0, %struct.connection* %1) #0 {
  %3 = alloca %struct.node, align 4
  %4 = alloca %struct.connection*, align 8
  %5 = alloca %struct.relative*, align 8
  %6 = getelementptr inbounds %struct.node, %struct.node* %3, i32 0, i32 0
  store i32 %0, i32* %6, align 4
  store %struct.connection* %1, %struct.connection** %4, align 8
  %7 = call %struct.relative* @zmalloc(i32 56)
  store %struct.relative* %7, %struct.relative** %5, align 8
  %8 = load %struct.relative*, %struct.relative** getelementptr inbounds (%struct.relative, %struct.relative* @RELATIVES, i32 0, i32 5), align 8
  %9 = load %struct.relative*, %struct.relative** %5, align 8
  %10 = getelementptr inbounds %struct.relative, %struct.relative* %9, i32 0, i32 5
  store %struct.relative* %8, %struct.relative** %10, align 8
  %11 = load %struct.relative*, %struct.relative** %5, align 8
  %12 = getelementptr inbounds %struct.relative, %struct.relative* %11, i32 0, i32 4
  store %struct.relative* @RELATIVES, %struct.relative** %12, align 8
  %13 = load %struct.relative*, %struct.relative** %5, align 8
  %14 = load %struct.relative*, %struct.relative** %5, align 8
  %15 = getelementptr inbounds %struct.relative, %struct.relative* %14, i32 0, i32 4
  %16 = load %struct.relative*, %struct.relative** %15, align 8
  %17 = getelementptr inbounds %struct.relative, %struct.relative* %16, i32 0, i32 5
  store %struct.relative* %13, %struct.relative** %17, align 8
  %18 = load %struct.relative*, %struct.relative** %5, align 8
  %19 = load %struct.relative*, %struct.relative** %5, align 8
  %20 = getelementptr inbounds %struct.relative, %struct.relative* %19, i32 0, i32 5
  %21 = load %struct.relative*, %struct.relative** %20, align 8
  %22 = getelementptr inbounds %struct.relative, %struct.relative* %21, i32 0, i32 4
  store %struct.relative* %18, %struct.relative** %22, align 8
  %23 = load %struct.relative*, %struct.relative** %5, align 8
  %24 = getelementptr inbounds %struct.relative, %struct.relative* %23, i32 0, i32 2
  %25 = bitcast %struct.node* %24 to i8*
  %26 = bitcast %struct.node* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %25, i8* align 4 %26, i64 4, i1 false)
  %27 = load %struct.relative*, %struct.relative** %5, align 8
  %28 = getelementptr inbounds %struct.relative, %struct.relative* %27, i32 0, i32 0
  store i32 1, i32* %28, align 8
  %29 = load %struct.connection*, %struct.connection** %4, align 8
  %30 = load %struct.relative*, %struct.relative** %5, align 8
  %31 = getelementptr inbounds %struct.relative, %struct.relative* %30, i32 0, i32 3
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 1
  store %struct.connection* %29, %struct.connection** %33, align 8
  %34 = load %struct.connection*, %struct.connection** %4, align 8
  %35 = getelementptr inbounds %struct.connection, %struct.connection* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.relative*, %struct.relative** %5, align 8
  %38 = getelementptr inbounds %struct.relative, %struct.relative* %37, i32 0, i32 3
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 0
  store i32 %36, i32* %40, align 8
  %41 = load %struct.relative*, %struct.relative** %5, align 8
  %42 = getelementptr inbounds %struct.relative, %struct.relative* %41, i32 0, i32 2
  %43 = getelementptr inbounds %struct.node, %struct.node* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* @host, align 4
  %46 = call i64 @link_color(i32 %44, i32 %45)
  %47 = load %struct.relative*, %struct.relative** %5, align 8
  %48 = getelementptr inbounds %struct.relative, %struct.relative* %47, i32 0, i32 1
  store i64 %46, i64* %48, align 8
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** @STATS, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  %53 = load %struct.relative*, %struct.relative** %5, align 8
  %54 = getelementptr inbounds %struct.relative, %struct.relative* %53, i32 0, i32 1
  %55 = load i64, i64* %54, align 8
  %56 = getelementptr inbounds i32, i32* %52, i64 %55
  %57 = load i32, i32* %56, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %56, align 4
  %59 = load %struct.TYPE_8__*, %struct.TYPE_8__** @STATS, align 8
  %60 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 8
  ret void
}

declare dso_local %struct.relative* @zmalloc(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @link_color(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
